# Brilliance

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  app.py  docker-compose.override.yml.example  docker-compose.yml  juliapkg.json  physics_core.py  pyproject.toml  requirements.txt  run_benchmarks.py  run_design.py  run_explore.py
agents/: __init__.py  benchmark.py  config.py  constraints.py  knowledge_graph.py  prompts.py  session.py  team.py  tools.py
benchmarks/: tasks.json
knowledge/: METHODOLOGY.md  README.md  accelerator_physics_design.md  manifest.json  ontology.json  pyjutrack_api_reference.md  taxonomy.json
knowledge/.graph/: cluster_index.json  manifest.snapshot.json  ontology.snapshot.json  release_prompt_context.md  stats.json  subject_index.json  taxonomy.snapshot.json
science/: __init__.py  analyze.py  dipole_scan.py  explore.py  plots.py  session_ingest.py  verify_physics.py
scripts/: Dockerfile.jutrack  build_knowledge_graph.py  pull_base.ps1  pull_base.sh  setup_env.py
templates/plain/: alsu_2gev.py  dba_3gev.py  fodo_3gev.py  fodo_arc.py  fodo_cell.py  heps_6gev.py  single_elements.py  spear3_3gev.py  std7ba_3gev.py  std7ba_6gev.py
workspace/: _inspector_resim.py  element_map.txt  physics_core.py  twiss_fodo_3GeV.csv
